add initDb.sql, refactoring Vote, Dish

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/restaurantrating
 spring.datasource.username=user
 spring.datasource.password=password
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
