--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,17 @@
             <artifactId>json-path</artifactId>
             <version>2.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.9.4</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.integration/spring-integration-core -->
+        <dependency>
+            <groupId>org.springframework.integration</groupId>
+            <artifactId>spring-integration-core</artifactId>
+            <version>5.0.7.RELEASE</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.restdocs</groupId>
